# flet_csv

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
doc/: 01_1_design_decisions.md  01_plan.md  02_history_summary.md  03_specification.md  04_domain_specification.md  05_infrastructure_specification.md  06_github_setup.md  07_git_workflow.md  08_usecase_specification.md  09_cli_specification.md
domain/: __init__.py  exceptions.py
domain/models/: __init__.py  csv_file.py  csv_schema.py  merge_result.py
domain/services/: __init__.py  csv_merger.py
infra/: __init__.py
infra/repositories/: __init__.py  csv_repository.py
tests/: __init__.py
tests/e2e/: __init__.py  test_main.py
tests/fixtures/csv/: day2_2025-10-19.csv  day3_2025-10-20.csv  full_format.csv  headerless_trailing_comma.csv  invalid_dates.csv  no_column_missing.csv  no_header.csv  quoted.csv  shift_jis.csv  wrong_order.csv
tests/unit/domain/: __init__.py  test_exceptions.py
tests/unit/domain/models/: __init__.py  test_csv_file.py  test_csv_schema.py  test_merge_result.py
tests/unit/domain/services/: __init__.py  test_csv_merger.py
tests/unit/infra/: __init__.py
tests/unit/infra/repositories/: __init__.py  test_csv_repository.py  test_csv_repository_trailing_na_col.py  test_csv_repository_trailing_na_with_fixture.py  test_csv_repository_zip.py
tests/unit/usecase/: __init__.py  test_merge_csv_files.py
usecase/: __init__.py  merge_csv_files.py
